Fixed gnome-shell scrollbar issue

--- a/src/main/gnome-shell/shell-3-28/gnome-shell-Light-pink.css
+++ b/src/main/gnome-shell/shell-3-28/gnome-shell-Light-pink.css
@@ -2821,8 +2821,8 @@ StScrollView.hfade {
   -st-hfade-offset: 64px;
 }
 
-.popup-menu StScrollBar {
-  margin: 0 12px;
+StScrollBar {
+  margin: 6px;
 }
 
 StScrollView StScrollBar {
@@ -2839,6 +2839,7 @@ StScrollBar StButton#vhandle, StScrollBar StButton#hhandle {
   border-radius: 8px;
   background-color: #565656;
   transition: 500ms all ease;
+  border: 4px solid transparent;
 }
 
 StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover {
