--- a/src/main/gnome-shell/shell-40-0/gnome-shell-Light-blue.css
+++ b/src/main/gnome-shell/shell-40-0/gnome-shell-Light-blue.css
@@ -2901,8 +2901,8 @@ StScrollView.hfade {
   -st-hfade-offset: 64px;
 }
 
-.popup-menu StScrollBar {
-  margin: 0 12px;
+StScrollBar {
+  margin: 6px;
 }
 
 StScrollView StScrollBar {
@@ -2919,6 +2919,7 @@ StScrollBar StButton#vhandle, StScrollBar StButton#hhandle {
   border-radius: 8px;
   background-color: #565656;
   transition: 500ms all ease;
+  border: 4px solid transparent;
 }
 
 StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover {
